# ___EXRuster_tools

./: .gitignore  CLAUDE.md  Cargo.toml  __new_scene_R3.txt  __new_scene_R3_60.txt  benchmark.ps1  benchmark_level3.ps1  build.bat  channel_groups.json  colors.md  list.md  opt.md  release.py  run.py  run_example.bat  run_thumbnailer.py  scene_MANAGE-IT_01_R1_MP.txt  scene_MANAGE-IT_18_R1_MP.txt  scene_MANAGE-IT_19_R1_MP.txt  scene_MANAGE-IT_20_R1_MP.txt
.claude/: settings.local.json
src/: fast_exr.rs  main.rs  simd_patterns.rs
tiff/: statystyki.txt
