[package]
name = "readEXR"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
exr = "1.73"
rayon = "1.8"
image = { version = "0.24", features = ["png"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Level 2 optimizations
memmap2 = "0.9"
tokio = { version = "1.0", features = ["fs", "io-util", "rt"] }

[[bin]]
name = "readEXR"
path = "src/main.rs"